openapi schema migration
